--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "latest",
     "@types/react": "latest",
